--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "author": "Jeff Dickey @jdxcode",
   "bugs": "https://github.com/oclif/semantic-release/issues",
   "dependencies": {
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/exec": "^5.0.0",
-    "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "^7.0.7",
-    "@semantic-release/npm": "^7.0.5",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.4",
+    "@semantic-release/npm": "^9.0.1",
     "execa": "^5.0.0",
-    "fs-extra": "^9.0.1",
+    "fs-extra": "^10.1.0",
     "npm-run-path": "^4.0.1",
-    "semantic-release": "^17.1.1"
+    "semantic-release": "^19.0.2"
   },
   "devDependencies": {
-    "eslint": "^7.3.1",
-    "eslint-config-oclif": "^3.1.0"
+    "eslint": "^8.14.0",
+    "eslint-config-oclif": "^4.0.0",
+    "lodash": "^4.17.21"
   },
   "engines": {
     "node": ">= 8.6.0"
